change meta desc

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Patrycja & Maciej - 27.09.2025</title>
-    <meta name="description" content="Zapraszamy na ślub Patrycji i Macieja - 27 września w Sobolowie" />
+    <meta name="description" content="Informator ślubny Patrycji i Macieja - 27 września w Sobolowie" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="Patrycja & Maciej - 27.09.2025" />
-    <meta property="og:description" content="Zapraszamy na ślub Patrycji i Macieja - 27 września w Sobolowie" />
+    <meta property="og:description" content="Informator ślubny Patrycji i Macieja - 27 września w Sobolowie" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
